# DSwet1

./: AVLtest1.cpp  CMakeLists.txt  CoursesManager.cpp  CoursesManager.h  CoursesManagerApp  CoursesManagerTest.cpp  CoursesTree.cpp  EmptyCoursesTree.cpp  EmptyCoursesTreeTest.cpp  README.md  SortedTree.cpp  SpecialNodes.cpp  SpecialNodes.h  a  a.out  fuck  generator  in.txt  k  library.cpp  library.h  myoutput.txt  out  output.txt  test  test.cpp
V2/: CMakeLists.txt  CoursesManagerApp  EmptyCoursesTree.cpp  SortedTree.cpp  SpecialNodes.h  TimeCheck.cpp  generator  in2.txt  library.cpp  out2.txt  output.txt
V2/AVLtree/: AVLtree.h
V2/CoursesTree/: CoursesTree.h
V2/EmptyCoursesTree/: SpecialNodes.cpp
V2/List/: List.h  ListTest.cpp
V2/Tests/: CoursesManagerTest.cpp  generator  test1.cpp  test2.cpp  test5.cpp
V2/Tests/CrazyTest/: crazyIn.txt  crazyOut.txt
V2/Tests/MyTest/: CoursesManagerTest.cpp  generator  output.txt  wetTest.cpp
V2/Tests/YanivTest/: YanivScript  out  tamir
V2/Tests/galTests/: in1.txt  myoutput.txt
V2/Tests/roniTests/: out
V2/Tests/segelTests/: .inscript.swp  convert.cpp  myoutput.txt  randtest0.in  randtest0.innew  randtest0.outnew  randtest1.in  randtest1.innew  randtest1.out  randtest1.outnew  (+44 more)
V3/: CMakeLists.txt  CoursesManager.cpp  CoursesManagerApp  CoursesTree.cpp  SpecialNodes.cpp  SpecialNodes.h  main.cpp  main1.cpp  myoutput.txt
V3/AVLtree/: AVLtest1.cpp  AVLtest2.cpp  AVLtree.h
V3/Array/: Array.h
V3/CoursesTree/: CoursesTree.h
V3/SortedTree/: SortedTree.cpp
V3/Tests/: CoursesManagerTest.cpp  test3.cpp  test4.cpp
(+44 files in other folders)
